--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
         <h3>Cek Khodam online</h3>
         <div class="input-container">
             <input type="text" id="namaUser" placeholder="masukkin nama lu">
-            <input type="date" id="tglultah">
+            <input type="date" id="tglultah" placeholder="masukkin tgl lahirlu">
             <button id="button">Cek</button>
         </div>
         <div class="sosmed">
