--- a/index.html
+++ b/index.html
@@ -13,8 +13,8 @@
     <div class="container">
         <h3>Cek Khodam online</h3>
         <div class="input-container">
-            <input type="text" id="namaUser" placeholder="masukkin nama lu">
-            <input type="date" id="tglultah" placeholder="masukkin tgl lahirlu">
+            <input type="text" id="namaUser" placeholder="Masukkan Nama Anda">
+            <input type="date" id="tglultah" placeholder="Masukkan Tanggal Lahir Anda">
             <button id="button">Cek</button>
         </div>
         <div class="sosmed">
